Deleted copy class Main2